// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and upgrade Azure workloads between plans, tiers, or SKUs, or modernize Azure SDK dependencies in source code. WHEN: upgrade Consumption to Flex Consumption, upgrade Azure Functions plan, change hosting plan, function app SKU, migrate App Service to Container Apps, modernize legacy Azure Java SDKs (com.microsoft.azure to com.azure), migrate Azure Cache for Redis (ACR/ACRE) to Azure Managed Redis (AMR).",
  "extractedKeywords": [
    "acre",
    "app service",
    "apps",
    "assess",
    "azure",
    "between",
    "cache",
    "change",
    "code",
    "consumption",
    "container",
    "dependencies",
    "deploy",
    "flex",
    "function",
    "functions",
    "hosting",
    "java",
    "legacy",
    "managed",
    "mcp",
    "microsoft",
    "migrate",
    "modernize",
    "monitor",
    "plan",
    "plans",
    "redis",
    "sdks",
    "service",
    "skus",
    "source",
    "tiers",
    "upgrade",
    "validation",
    "when",
    "workloads",
  ],
  "name": "azure-upgrade",
}
`;

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "acre",
  "app service",
  "apps",
  "assess",
  "azure",
  "between",
  "cache",
  "change",
  "code",
  "consumption",
  "container",
  "dependencies",
  "deploy",
  "flex",
  "function",
  "functions",
  "hosting",
  "java",
  "legacy",
  "managed",
  "mcp",
  "microsoft",
  "migrate",
  "modernize",
  "monitor",
  "plan",
  "plans",
  "redis",
  "sdks",
  "service",
  "skus",
  "source",
  "tiers",
  "upgrade",
  "validation",
  "when",
  "workloads",
]
`;
